# py-project-set

./: .gitignore  README.md  pyproject.toml
cadnorm/: __init__.py
cadnorm/cli/: __init__.py  main.py
cadnorm/core/: __init__.py  db.py  loader.py  models.py
cadnorm/standards/: iram_general.json  schema.json
cadnorm/translators/: __init__.py  autocad.py  base.py  librecad.py
scripts/: poc_ezdxf.py
tests/: conftest.py  test_cli.py  test_db.py  test_loader.py  test_models.py  test_schema.py  test_translators.py
