[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadnorm"
version = "0.1.0"
description = "Generador de plantillas CAD configuradas según normas técnicas (IRAM, ISO, ASME)"
authors = [{name = "Federico Casado", email = "federicoarielcasado@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["CAD", "IRAM", "ISO", "DXF", "DWT", "normas técnicas", "AutoCAD", "LibreCAD"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ezdxf>=1.3",
    "pydantic>=2.5",
    "typer>=0.12",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cadnorm = "cadnorm.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cadnorm*"]

[tool.setuptools.package-data]
"cadnorm.standards" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cadnorm --cov-report=term-missing"

[tool.coverage.run]
source = ["cadnorm"]
omit = ["tests/*"]
